[project]
name = "scidata-pac-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "plotly>=6.6.0",
    "shap>=0.51.0",
    "streamlit>=1.55.0",
    "tensorflow>=2.20.0",
    "ucimlrepo>=0.0.7",
]
